/c-family 2013-07-10  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/57869
	* c.opt: Add Wconditionally-supported.

/cp
2013-07-10  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/57869
	* typeck.c (build_reinterpret_cast_1): With -Wconditionally-supported
	warn about casting between pointer-to-function and pointer-to-object.

/gcc
2013-07-10  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/57869
	* doc/invoke.texi: Document -Wconditionally-supported.

/testsuite
2013-07-10  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/57869
	* g++.dg/cpp0x/reinterpret_cast1.C: New.
	* g++.dg/warn/Wconditionally-supported-1.C: Likewise.
	* g++.dg/conversion/dr195.C: Update.
	* g++.dg/expr/cast2.C: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@200876 138bc75d-0d04-0410-961f-82ee72b054a4