gcc/testsuite/g++.dg/conversion/dr195.C
@@ -1,11 +1,12 @@
 // Copyright (C) 2004 Free Software Foundation, Inc.
 // Contributed by Nathan Sidwell 20 Oct 2004 <nathan@codesourcery.com>
 
-// DR 195 will allow conversions between function and object pointers
-// under some circumstances. It is in drafting, so we don't implement
-// it (yet).
+// DR 195 was about allowing conversions between function and object
+// pointers under some circumstances.  The issue got resolved for C++11,
+// which, in 5.2.10 p8 says that: "Converting a function pointer to an
+// object pointer type or vice versa is conditionally-supported."
 
-// This checks we warn when being pedantic.
+// This checks we don't warn anymore with -pedantic.
 
 typedef void (*PF)(void);
 typedef void *PV;
@@ -18,12 +19,12 @@ void foo ()
   PO po;
 
   /* the following two will almost definitly be ok with 195.  */
-  pf = reinterpret_cast <PF>(pv); // { dg-warning "casting between" "" }
-  pv = reinterpret_cast <PV>(pf); // { dg-warning "casting between" "" }
+  pf = reinterpret_cast <PF>(pv);
+  pv = reinterpret_cast <PV>(pf);
 
   /* the following two might or might not be ok with 195.  */
-  pf = reinterpret_cast <PF>(po); // { dg-warning "casting between" "" }
-  po = reinterpret_cast <PO>(pf); // { dg-warning "casting between" "" }
+  pf = reinterpret_cast <PF>(po);
+  po = reinterpret_cast <PO>(pf);
 
   /* These will never be ok, as they are implicit.  */
   pv = pf; // { dg-error "invalid conversion" "" }
